Bug 688168 - pdfwrite, ps2write : incorrect barcode Bug687472.ps
Summary: pdfwrite, ps2write : incorrect barcode Bug687472.ps
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Windows XP
: P2 normal
Assignee: Igor Melichev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-06-28 06:33 UTC by Igor Melichev
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Melichev 2005-06-28 06:33:33 UTC
The "normal" and "pdfwrite" are different with ppmraw Bug687472.ps
Comment 1 Igor Melichev 2005-06-28 07:36:00 UTC
Bumped the priority because I believe the test comes from a customer bug about 
pdfwrite.
Comment 2 Igor Melichev 2005-06-28 16:07:05 UTC
Patch to HEAD :
http://ghostscript.com/pipermail/gs-cvs/2005-June/005575.html